# random-raster

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENCE.txt  README.md  SUMMARY.md  random_raster_schema.json  vcpkg.json
docs/: random_raster_driver.md
include/: gdal_typetraits.h
include/pronto/raster/: block_generator_interface.h  random_block_generator.h  random_dataset.h  random_driver.h  random_raster_band.h  random_raster_dataset.h  random_raster_driver.h  random_raster_parameters.h
src/: main.cpp  random_dataset.cpp  random_driver.cpp  random_raster_band.cpp  random_raster_dataset.cpp  random_raster_driver.cpp  random_raster_parameters.cpp
tests/: conftest.py  requirements.txt  test_driver_presence.py  test_uniform_integer.py
